# amber-codon-scanner

./: CITATION.cff  CONTRIBUTING.md  README.md  basic_usage.py  pyproject.toml  scanner.py  test_scanner.py
.github/workflows/: ci.yml
amber_codon_scanner/: __init__.py  report.py  scanner.py  utils.py
examples/: basic_usage.py  example_sequences.fasta
tests/: test_scanner.py
