[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amber-codon-scanner"
version = "0.1.0"
description = "Scan archaeal DNA sequences for UAG amber codons and classify them as pyrrolysine-coding or stop"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["pyrrolysine", "archaea", "amber codon", "UAG", "Methanosarcina", "genetic code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/CameronPiepkorn/amber-codon-scanner"
"Bug Tracker" = "https://github.com/CameronPiepkorn/amber-codon-scanner/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["amber_codon_scanner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -v"
